LPS-148585 build lang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -2452,7 +2452,7 @@ cab=Кабината (Automatic Translation)
 cache-actions=Действия в кеша (Automatic Translation)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache data on the first request.
 cache-dir-clean-up-expunge=Кеш директория почистване на expunge (Automatic Translation)
 cache-dir-clean-up-expunge-help=Задайте броя на дните, в които се съхранява файлът в кеша. (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=Неодобрен
 not-assigned=Не е зададен (Automatic Translation)
 not-attending=Неучастващ
 not-available=Неприложим
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=Не съдържа (Automatic Translation)
 not-customizable=Не може да се персонализира (Automatic Translation)
 not-customized=Не е персонализиран (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=Отключване на дата
 unban-this-user=Unban Този потребител (Automatic Translation)
 unban-user=Потребител с неограничена употреба (Automatic Translation)
 unblock=Деблокиране (Automatic Translation)
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Непроменени (Automatic Translation)
 undefined=Недефиниран
 undeployed=Непокрити (Automatic Translation)
