--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -2452,7 +2452,7 @@ cab=Cabina
 cache-actions=Accions de memòria cau
 cache-control=Control de la memòria cau
 cache-control-configuration-name=Control de memòria cau
-cache-control-description=Establiu la política de control de la memòria cau per als documents amb permisos de visualització per als convidats.
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Dades de la memòria cau en la primera sol·licitud.
 cache-dir-clean-up-expunge=Eliminació de la neteja del directori de la memòria cau
 cache-dir-clean-up-expunge-help=Estableix el nombre de dies que un fitxer es guarda a la memòria cau.
@@ -10134,8 +10134,6 @@ not-approved=No s'ha aprovat
 not-assigned=No s'ha assignat
 not-attending=No hi assistiran
 not-available=n/d
-not-cacheable-mime-types=Tipus de MIME no emmagatzemables
-not-cacheable-mime-types-description=Establiu una llista de tipus MIME que no es desaran a la memòria cau.
 not-contains=No conté
 not-customizable=No personalitzable
 not-customized=No personalitzat
@@ -16369,6 +16367,8 @@ unban-date=Data de la fi de l'exclusió
 unban-this-user=Deixa d'excloure aquest usuari
 unban-user=Deixar d'excloure un usuari
 unblock=Desbloquejar
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Sense canvis
 undefined=Indefinit
 undeployed=Aturat
