--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -2452,7 +2452,7 @@ cab=Cab (Automatic Translation)
 cache-actions=Akce mezipaměti (Automatic Translation)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache data on the first request.
 cache-dir-clean-up-expunge=Vymazání adresáře mezipaměti (Automatic Translation)
 cache-dir-clean-up-expunge-help=Nastavte počet dní, po které je soubor uložen v mezipaměti. (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=Neschváleno
 not-assigned=Nepřiřazeno
 not-attending=Neúčastní se
 not-available=Není dostupný
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=Neobsahuje (Automatic Translation)
 not-customizable=Nelze přizpůsobit (Automatic Translation)
 not-customized=Není přizpůsobeno (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=Datum zrušení vyloučení
 unban-this-user=Zrušit vyloučení uživatele
 unban-user=Uživatel bezbanu (Automatic Translation)
 unblock=Odblokovat
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=nezměněný (Automatic Translation)
 undefined=Nedefinovaný
 undeployed=Odinstalován
