--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -2452,7 +2452,7 @@ cab=Cab (Automatic Copy)
 cache-actions=Cachehandlinger (Automatic Translation)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache data on the first request.
 cache-dir-clean-up-expunge=Oprydning i cachemappe Expunge (Automatic Translation)
 cache-dir-clean-up-expunge-help=Angiv det antal dage, en fil skal opbevares i cachen. (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=Ikke godkendt
 not-assigned=Ikke tilknyttet
 not-attending=Ikke til stede
 not-available=Ikke tilgængelig
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=Indeholder ikke (Automatic Translation)
 not-customizable=Kan ikke tilpasses (Automatic Translation)
 not-customized=Ikke tilpasset (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=Dato for afstø.dato (Automatic Translation)
 unban-this-user=Unban this bruger
 unban-user=Unban-bruger (Automatic Translation)
 unblock=Unblock (Automatic Translation)
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=uændret (Automatic Translation)
 undefined=Udefineret
 undeployed=Undeployed (Automatic Copy)
