--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -2452,7 +2452,7 @@ cab=Kab
 cache-actions=Zwischenspeicheroptionen
 cache-control=Cachesteuerung
 cache-control-configuration-name=Cachesteuerung
-cache-control-description=Legen Sie die Cache-Kontrollrichtlinie für Dokumente mit Ansichtsrechten für Gäste fest.
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Zwischenspeichern von Daten bei der ersten Anforderung.
 cache-dir-clean-up-expunge=Aufräumen und Löschen im Cache-Directory
 cache-dir-clean-up-expunge-help=Legen Sie die Anzahl der Tage fest, für die eine Datei im Cache bleibt.
@@ -10134,8 +10134,6 @@ not-approved=Nicht genehmigt
 not-assigned=Nicht zugewiesen
 not-attending=Nicht teilnehmend
 not-available=Nicht verfügbar
-not-cacheable-mime-types=Nicht zwischenspeicherbare MIME-Types
-not-cacheable-mime-types-description=Legen Sie eine Liste von Mime-Typen fest, die nicht zwischengespeichert werden sollen.
 not-contains=Enthält nicht
 not-customizable=Nicht anpassbar
 not-customized=Nicht benutzerdefiniert
@@ -16369,6 +16367,8 @@ unban-date=Datum der Verbannungsaufhebung
 unban-this-user=Verbannung dieses Benutzer aufheben
 unban-user=Verbannung des Benutzers aufheben
 unblock=Entsperren
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Unverändert
 undefined=Nicht definiert
 undeployed=Deinstalliert
