--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -2452,7 +2452,7 @@ cab=Καμπίνα (Automatic Translation)
 cache-actions=Ενέργειες προσωρινής μνήμης (Automatic Translation)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache data on the first request.
 cache-dir-clean-up-expunge=Διαγραφή διαγραφής καταλόγου προσωρινής μνήμης (Automatic Translation)
 cache-dir-clean-up-expunge-help=Ορίστε τον αριθμό των ημερών που ένα αρχείο διατηρείται στην προσωρινή μνήμη. (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=Μη εγκεκριμένο
 not-assigned=Δεν έχει ανατεθεί
 not-attending=Δεν συμμετέχει
 not-available=Μη διαθεσιμο
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=Δεν περιέχει (Automatic Translation)
 not-customizable=Δεν είναι προσαρμόσιμο (Automatic Translation)
 not-customized=Δεν έχει προσαρμοστεί (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=Να επιτραπεί πάλι η ημερομηνία
 unban-this-user=Να επιτραπεί πάλι ο χρήστης
 unban-user=Μη άνιος χρήστης (Automatic Translation)
 unblock=Ξεμπλοκάρετε (Automatic Translation)
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=αμετάβλητος (Automatic Translation)
 undefined=Απροσδιόριστο
 undeployed=Απεγκατεστημένο
