--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -2452,7 +2452,7 @@ cab=Cabina
 cache-actions=Acciones de cacheado
 cache-control=Control de caché
 cache-control-configuration-name=Control de caché
-cache-control-description=Establezca la directiva de control de caché para documentos con permisos de vista para invitados.
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache de datos en la primera petición.
 cache-dir-clean-up-expunge=Borrado de limpieza de directorio de caché
 cache-dir-clean-up-expunge-help=Establece el número de días en que se mantiene un archivo en la caché.
@@ -10134,8 +10134,6 @@ not-approved=No aprobado
 not-assigned=No asignado
 not-attending=No atenderán
 not-available=N/D
-not-cacheable-mime-types=No hay tipos MIME que se puedan almacenar en caché
-not-cacheable-mime-types-description=Establezca una lista de tipos MIME que no se almacenarán en caché.
 not-contains=No contiene
 not-customizable=No personalizable
 not-customized=No personalizado
@@ -16369,6 +16367,8 @@ unban-date=Fecha de fin del bloqueo
 unban-this-user=Desbloquear a este usuario
 unban-user=Desbloquear al usuario
 unblock=Desbloquear
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Sin cambios
 undefined=Indefinido
 undeployed=Desinstalado
