--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -2452,7 +2452,7 @@ cab=Cab (Automatic Translation)
 cache-actions=Vahemälu toimingud (Automatic Translation)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache data on the first request.
 cache-dir-clean-up-expunge=Vahemälu kataloogi puhastamine Expunge (Automatic Translation)
 cache-dir-clean-up-expunge-help=Määrake päevade arv, mille jooksul faili vahemälus hoitakse. (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=Tagasi lükatud
 not-assigned=Pole määratud (Automatic Translation)
 not-attending=Ei osale
 not-available=N/a (Automatic Translation)
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=Ei sisalda (Automatic Translation)
 not-customizable=Pole kohandatav (Automatic Translation)
 not-customized=Kohandamata (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=Blokeerimise lõpp
 unban-this-user=Tühista blokeerimine
 unban-user=Tühista kasutaja (Automatic Translation)
 unblock=Blokeeringu (Automatic Translation)
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Muutmata (Automatic Translation)
 undefined=Defineerimata
 undeployed=Juurutamata (Automatic Translation)
