--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -2452,7 +2452,7 @@ cab=ohjaamo
 cache-actions=Välimuistitoiminnat
 cache-control=Välimuistin hallinta
 cache-control-configuration-name=Välimuistin hallinta
-cache-control-description=Aseta välimuistinhallintakäytäntö asiakirjoille, jossa on tarkasteluoikeudet vieraille.
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Välimuistitiedot ensimmäisellä pyynnöllä.
 cache-dir-clean-up-expunge=Välimuistihakemiston Puhdistuspyyhintä
 cache-dir-clean-up-expunge-help=Määritä päivien määrä, jonka ajan tiedosto pidetään välimuistissa.
@@ -10132,8 +10132,6 @@ not-approved=Ei hyväksytty
 not-assigned=Ei myönnetty
 not-attending=Ei osallistu
 not-available=Ei käytettävissä
-not-cacheable-mime-types=Ei välimuistiin tallennettavia mime-tyyppejä
-not-cacheable-mime-types-description=Aseta mime-tyyppien luettelo, joita ei tallenneta välimuistiin.
 not-contains=Ei Sisällä
 not-customizable=Ei mukautettava
 not-customized=Ei Mukautettu
@@ -16365,6 +16363,8 @@ unban-date=Bannauksen poisto päivä
 unban-this-user=Poista tämän käyttäjän esto
 unban-user=Poista käyttäjän esto
 unblock=Poista esto
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Muuttumaton
 undefined=Määrittelemätön
 undeployed=Asennus on poistettu
