--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -2452,7 +2452,7 @@ cab=Taxi
 cache-actions=Actions du cache
 cache-control=Contrôle du cache
 cache-control-configuration-name=Contrôle du cache
-cache-control-description=Définissez une politique de contrôle du cache pour les documents avec des autorisations d'affichage pour les invités.
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Données du cache de la première demande.
 cache-dir-clean-up-expunge=Purger le répertoire du cache
 cache-dir-clean-up-expunge-help=Définir le nombre de jours de conservation d'un fichier dans le cache.
@@ -10134,8 +10134,6 @@ not-approved=Non approuvé
 not-assigned=Non assigné
 not-attending=N'étant pas présent
 not-available=Non disponible
-not-cacheable-mime-types=Types MIME non cachables
-not-cacheable-mime-types-description=Définissez une liste de types mime qui ne seront pas mis en cache.
 not-contains=Ne contient pas
 not-customizable=Non personalisable
 not-customized=Non personnalisé
@@ -16369,6 +16367,8 @@ unban-date=Date de réintegration
 unban-this-user=Débannir cet utilisateur
 unban-user=Débannier utilisateur
 unblock=Débloquer
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Inchangé
 undefined=Non défini
 undeployed=Non déployé
