--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -2452,7 +2452,7 @@ cab=चालक कक्ष (Automatic Translation)
 cache-actions=कैश क्रियाएं (Automatic Translation)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache data on the first request.
 cache-dir-clean-up-expunge=कैश निर्देशिका सफाई से निकाल (Automatic Translation)
 cache-dir-clean-up-expunge-help=कैश में किसी फाइल को कितने दिन रखा जाता है, उसे सेट करें। (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=Approved नही
 not-assigned=Assigned नही
 not-attending=उपस्थित नहीं (Automatic Translation)
 not-available=N/A (Automatic Translation)
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=शामिल नहीं (Automatic Translation)
 not-customizable=अनुकूलन योग्य नहीं (Automatic Translation)
 not-customized=अनुकूलित नहीं (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=Unban डेट
 unban-this-user=इस उपयोगकर्ता को अनबन करें (Automatic Translation)
 unban-user=अनबान उपयोगकर्ता (Automatic Translation)
 unblock=अनब्लॉक (Automatic Translation)
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=अपरिवर्तित (Automatic Translation)
 undefined=अपरिभाषित
 undeployed=अनियोजित (Automatic Translation)
