--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -2452,7 +2452,7 @@ cab=taxi
 cache-actions=Gyorsítótár tevékenységek
 cache-control=Gyorsítótár vezérlése
 cache-control-configuration-name=Gyorsítótár vezérlése
-cache-control-description=Határozzon meg gyorsítótár-vezérlő politikát a dokumentumokhoz megtekintési jogosultsággal rendelkező vendégek számára.
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Gyorsítótárazza az adatot az első kérésre.
 cache-dir-clean-up-expunge=Gyorsítótár könyvtárának tisztítása törléssel
 cache-dir-clean-up-expunge-help=Állítsa be a napok számát, amíg egy fájl a gyorsítótárban marad.
@@ -10135,8 +10135,6 @@ not-approved=Nincs jóváhagyva
 not-assigned=Nincs kijelölve
 not-attending=Nem vesz részt
 not-available=-
-not-cacheable-mime-types=Nem gyorsítótárazható mime-típusok
-not-cacheable-mime-types-description=Állítsa össze a mime-típusok listáját, amelyek nem lesznek gyorsítótárazva.
 not-contains=Nem tartalmaz
 not-customizable=Nem szabható testre.
 not-customized=Nem testreszabott
@@ -16370,6 +16368,8 @@ unban-date=Dátum kitiltásának feloldása
 unban-this-user=Ezen felhasználó kitiltásának feloldása
 unban-user=Felhasználó kitiltásának feloldása
 unblock=Blokkolás eltávolítása
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Változatlan
 undefined=Nincs megadva
 undeployed=Eltávolítva
