--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -2451,7 +2451,7 @@ cab=taxi (Automatic Translation)
 cache-actions=Cache Azioni
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache dei dati alla prima richiesta.
 cache-dir-clean-up-expunge=Expunge di pulizia directory cache (Automatic Translation)
 cache-dir-clean-up-expunge-help=Impostare il numero di giorni in cui un file viene conservato nella cache. (Automatic Translation)
@@ -10133,8 +10133,6 @@ not-approved=Non approvato
 not-assigned=Non assegnato
 not-attending=Non in assistenza
 not-available=N/D
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=Non contiene (Automatic Translation)
 not-customizable=Non Personalizzabile
 not-customized=Non personalizzato (Automatic Translation)
@@ -16368,6 +16366,8 @@ unban-date=Data di Sblocco
 unban-this-user=Sblocca questo utente
 unban-user=Sblocca Utente
 unblock=Sblocca
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=inalterato (Automatic Translation)
 undefined=Non definito
 undeployed=Rimosso
