--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -2452,7 +2452,7 @@ cab=Cab
 cache-actions=キャッシュ動作
 cache-control=キャッシュ制御
 cache-control-configuration-name=キャッシュ制御
-cache-control-description=ゲストが表示権限を持つドキュメントのキャッシュ制御ポリシーを設定します。
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=初回リクエスト時にデータをキャッシュする
 cache-dir-clean-up-expunge=キャッシュディレクトリのデータ保持日数
 cache-dir-clean-up-expunge-help=ファイルキャッシュの保持日数を設定してください。
@@ -10134,8 +10134,6 @@ not-approved=未承認
 not-assigned=割り当てられていない
 not-attending=出席しません
 not-available=該当なし
-not-cacheable-mime-types=キャッシュ不可能な MIME タイプ
-not-cacheable-mime-types-description=キャッシュ対象外にする MIME タイプのリストを設定します。
 not-contains=以下を含まない
 not-customizable=カスタマイズ不可
 not-customized=カスタマイズなし
@@ -16369,6 +16367,8 @@ unban-date=アクセス禁止の解除日
 unban-this-user=このアクセス禁止中のユーザーを解除する。
 unban-user=ユーザーのアクセス禁止解除
 unblock=ブロック解除
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=未変更
 undefined=未分類
 undeployed=アンデプロイ
