--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -2452,7 +2452,7 @@ cab=택시 (Automatic Translation)
 cache-actions=캐시 작업 (Automatic Translation)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache data on the first request.
 cache-dir-clean-up-expunge=캐시 디렉토리 정리 Expunge (Automatic Translation)
 cache-dir-clean-up-expunge-help=파일이 캐시에 보관되는 일 수를 설정합니다. (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=승인되는
 not-assigned=할당되지 않음 (Automatic Translation)
 not-attending=참석하지 않기
 not-available=N/A (Automatic Translation)
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=포함되지 않음 (Automatic Translation)
 not-customizable=사용자 정의 할 수 없습니다 (Automatic Translation)
 not-customized=사용자 지정되지 않음 (Automatic Translation)
@@ -16366,6 +16364,8 @@ unban-date=Unban날짜
 unban-this-user=이 사용자 금지 (Automatic Translation)
 unban-user=언금지 사용자 (Automatic Translation)
 unblock=차단을 해제 (Automatic Translation)
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=변경 (Automatic Translation)
 undefined=확정되지 않는
 undeployed=배포되지 않은 (Automatic Translation)
