--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -2452,7 +2452,7 @@ cab=Kabina (Automatic Translation)
 cache-actions=Talpyklos veiksmai (Automatic Translation)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache data on the first request.
 cache-dir-clean-up-expunge=Talpyklos katalogas Išvalyti Expunge (Automatic Translation)
 cache-dir-clean-up-expunge-help=Nustatykite, kiek dienų failas saugomas talpykloje. (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=Nepatvirtinta (Automatic Translation)
 not-assigned=Nepriskirta (Automatic Translation)
 not-attending=Nedalyvauti (Automatic Translation)
 not-available=N/a (Automatic Translation)
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=Nėra (Automatic Translation)
 not-customizable=Negalima tinkinti (Automatic Translation)
 not-customized=Ne tinkinta (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=Unban data (Automatic Translation)
 unban-this-user=Atseti šį vartotoją (Automatic Translation)
 unban-user=Unban vartotojas (Automatic Translation)
 unblock=Atblokuoti (Automatic Translation)
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Nepakitęs (Automatic Translation)
 undefined=Neapibrėžta (Automatic Translation)
 undeployed=Neįdiegta (Automatic Translation)
