--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -2452,7 +2452,7 @@ cab=Teksi (Automatic Translation)
 cache-actions=Tindakan Cache (Automatic Translation)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Data cache pada permintaan pertama. (Automatic Translation)
 cache-dir-clean-up-expunge=Cache Direktori Pembersihan Expunge (Automatic Translation)
 cache-dir-clean-up-expunge-help=Setkan bilangan hari fail disimpan dalam cache. (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=Tidak Diluluskan (Automatic Translation)
 not-assigned=Tidak Diuntukkan (Automatic Translation)
 not-attending=Tidak Menghadiri (Automatic Translation)
 not-available=N/A (Automatic Translation)
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=Tidak Mengandungi (Automatic Translation)
 not-customizable=Tidak Boleh Disesuaikan (Automatic Translation)
 not-customized=Tidak Disesuaikan (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=Tarikh Luar Bandar (Automatic Translation)
 unban-this-user=Buka Jalur Pengguna Ini (Automatic Translation)
 unban-user=Pengguna Unban (Automatic Translation)
 unblock=Buang Sekatan (Automatic Translation)
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Tidak berubah (Automatic Translation)
 undefined=Tidak ditakrifkan (Automatic Translation)
 undeployed=Tidak dilayan (Automatic Translation)
