--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -2452,7 +2452,7 @@ cab=Cab (Automatic Translation)
 cache-actions=Hurtigbufferhandlinger (Automatic Translation)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Mellomlagredata på første forespørsel.
 cache-dir-clean-up-expunge=Opprydding i hurtigbufferkatalogen uttømmes (Automatic Translation)
 cache-dir-clean-up-expunge-help=Angi antall dager en fil skal beholdes i hurtigbufferen. (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=Ikke godkjent
 not-assigned=Ikke tilordnet
 not-attending=Deltar ikke
 not-available=Ikke tilgjengelig
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=Inneholder ikke (Automatic Translation)
 not-customizable=Ikke tilpassbare
 not-customized=Ikke tilpasset (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=Dato for avslutning av utestengelse
 unban-this-user=Fjern brukerens utestengelse
 unban-user=Fjern utestenging av bruker
 unblock=Fjern blokkering
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Uendret
 undefined=Udefinert
 undeployed=Ikke deployet
