--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -2452,7 +2452,7 @@ cab=Kabiny (Automatic Translation)
 cache-actions=Akcje pamięci podręcznej (Automatic Translation)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache data on the first request.
 cache-dir-clean-up-expunge=Katalog pamięci podręcznej Oczyszczanie Expunge (Automatic Translation)
 cache-dir-clean-up-expunge-help=Ustaw liczbę dni przechowywania pliku w pamięci podręcznej. (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=Nie zatwierdzony
 not-assigned=Nie przydzielone
 not-attending=Nie uczestniczy
 not-available=Nie dostępny
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=Nie zawiera (Automatic Translation)
 not-customizable=Nie można dostosowywać (Automatic Translation)
 not-customized=Nie dostosowane (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=Data zdjęcia bana
 unban-this-user=Zdejmij bana z tego użytkownika
 unban-user=Odbanuj użytkownika (Automatic Translation)
 unblock=Odblokuj
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Niezmienione (Automatic Translation)
 undefined=Nieokreślony
 undeployed=Cofnięto wdrożenie
