--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -2452,7 +2452,7 @@ cab=Táxi
 cache-actions=Ações do Cache
 cache-control=Controle de cache
 cache-control-configuration-name=Controle de cache
-cache-control-description=Definir política de controle tache para documentos com permissões de visualização para convidados.
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Colocar dados em cache na primeira solicitação.
 cache-dir-clean-up-expunge=Eliminação de limpeza do diretório cache
 cache-dir-clean-up-expunge-help=Definir o número de dias que um arquivo é mantido no cache.
@@ -10132,8 +10132,6 @@ not-approved=Reprovado
 not-assigned=Não Atribuído
 not-attending=Não participa
 not-available=N/D
-not-cacheable-mime-types=Nenhum tipo de Mime que pode ser feito cache
-not-cacheable-mime-types-description=Definir uma lista de tipos de mime que não será colocado em cache.
 not-contains=Não contém
 not-customizable=Não Personalizável
 not-customized=Não personalizado
@@ -16367,6 +16365,8 @@ unban-date=Data de desbloqueio
 unban-this-user=Desbloquear este usuário
 unban-user=Desfazer Banimento do Usuário
 unblock=Desbloquear
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Sem alterações
 undefined=Indefinido
 undeployed=Desinstalar
