--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -2452,7 +2452,7 @@ cab=Táxi
 cache-actions=Ações de Cache
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Controlo de Cache
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Colocar dados em cache na primeira petição.
 cache-dir-clean-up-expunge=Diretório de cache limpar expunge (Automatic Translation)
 cache-dir-clean-up-expunge-help=Defina o número de dias em que um arquivo é mantido no cache. (Automatic Translation)
@@ -10134,8 +10134,6 @@ not-approved=Reprovado
 not-assigned=Não Atribuído
 not-attending=Não Participa
 not-available=N/D
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=Não contém (Automatic Translation)
 not-customizable=Não Personalizável
 not-customized=Não personalizado (Automatic Translation)
@@ -16369,6 +16367,8 @@ unban-date=Data de Desbloqueio
 unban-this-user=Desbloquear este Utilizador
 unban-user=Desbloquear Utilizador
 unblock=Desbloquear
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=inalterado (Automatic Translation)
 undefined=Indefinido
 undeployed=Desinstalado
