--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -2452,7 +2452,7 @@ cab=CAB
 cache-actions=Cacheåtgärder
 cache-control=Cachekontroll
 cache-control-configuration-name=Cachekontroll
-cache-control-description=Ange policy för cachekontroll för dokument med Visa behörigheter för gäster.
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cachedata vid första förfrågan.
 cache-dir-clean-up-expunge=Radera rensning av cachekatalogen
 cache-dir-clean-up-expunge-help=Ange antalet dagar som en fil finns i cache.
@@ -10132,8 +10132,6 @@ not-approved=Ej godkänd
 not-assigned=Ej tilldelad
 not-attending=Ej närvarande
 not-available=Ej tillgänglig
-not-cacheable-mime-types=Inga cachelagringsbara mimetyper
-not-cacheable-mime-types-description=Ange en lista med mime-typer som inte cachas.
 not-contains=Innehåller inte
 not-customizable=Inte anpassningsbar
 not-customized=Inte anpassad
@@ -16367,6 +16365,8 @@ unban-date=Uteslutning avslutas datum
 unban-this-user=Upphäv avstängning av den här användaren
 unban-user=Upphäv avstängning av användaren
 unblock=Ta bort blockering
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Oförändrad
 undefined=Odefinierad
 undeployed=Ej driftsatt
