--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -2452,7 +2452,7 @@ cab=கேப்
 cache-actions=Cache Actions (Automatic Copy)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache data on the first request. (Automatic Copy)
 cache-dir-clean-up-expunge=Cache Directory Clean Up Expunge (Automatic Copy)
 cache-dir-clean-up-expunge-help=ஃபைலை cache-ல் வைத்திருக்கும் நாட்களின் எண்ணிக்கையை அமைக்கவும்.
@@ -10132,8 +10132,6 @@ not-approved=ஒப்புதல் இல்லை
 not-assigned=நியமிக்கப்படவில்லை
 not-attending=கலந்துகொள்ளவில்லை
 not-available=N/A (Automatic Copy)
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=இல்லை
 not-customizable=வசதிக்கேற்ப மாற்றமுடியாது
 not-customized=Not Customized (Automatic Copy)
@@ -16367,6 +16365,8 @@ unban-date=தேதி மாற்றப்படாது
 unban-this-user=இந்த பயனரை Unban செய்யவும்
 unban-user=இந்த பயனரை Unban செய்யவும்
 unblock=விடுவி
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Unchanged (Automatic Copy)
 undefined=வரையறுக்கப்படாதது
 undeployed=Undeployed (Automatic Copy)
