--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -2452,7 +2452,7 @@ cab=Cab (Automatic Translation)
 cache-actions=การกระทําแคช (Automatic Translation)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=ข้อมูลแคชในคำขอแรก
 cache-dir-clean-up-expunge=ล้างไดเรกทอรีแคช Expunge (Automatic Translation)
 cache-dir-clean-up-expunge-help=ตั้งค่าจํานวนวันที่เก็บไฟล์ไว้ในแคช (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=ไม่ได้รับการอนุมัติ (Automati
 not-assigned=ไม่ได้มอบหมาย (Automatic Translation)
 not-attending=ไม่เข้าร่วม (Automatic Translation)
 not-available=N/A (Automatic Translation)
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=ไม่มี (Automatic Translation)
 not-customizable=ปรับแต่งไม่ได้
 not-customized=ไม่ได้กําหนดเอง (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=วันที่ยกเลิกการแบน
 unban-this-user=เลิกแบนผู้ใช้รายนี้
 unban-user=เลิกแบนผู้ใช้
 unblock=ยกเลิกการบล็อก
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=เปลี่ยน แปลง (Automatic Translation)
 undefined=ไม่ได้กําหนด (Automatic Translation)
 undeployed=ไม่ได้ปรับใช้ (Automatic Translation)
