--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -2452,7 +2452,7 @@ cab=Кабіни (Automatic Translation)
 cache-actions=Дії кешу (Automatic Translation)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache data on the first request.
 cache-dir-clean-up-expunge=Очищення каталогу кеша Expunge (Automatic Translation)
 cache-dir-clean-up-expunge-help=Установіть кількість днів зберігання файлу в кеші. (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=Не підтверджено
 not-assigned=Не призначено (Automatic Translation)
 not-attending=Не відвідає
 not-available=Не доступно
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=Не містить (Automatic Translation)
 not-customizable=Не настроюється (Automatic Translation)
 not-customized=Не настроєно (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=Дата відміни заборони
 unban-this-user=Роззняти цього користувача (Automatic Translation)
 unban-user=Скасування імені користувача (Automatic Translation)
 unblock=Розблокувати (Automatic Translation)
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Незмінними (Automatic Translation)
 undefined=Невичначено
 undeployed=Нерозірваний (Automatic Translation)
