--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -2452,7 +2452,7 @@ cab=tập tin định dạng Cab
 cache-actions=Hành động của Bộ đệm ẩn (Automatic Translation)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache data on the first request.
 cache-dir-clean-up-expunge=Dọn dẹp thư mục bộ nhớ cache Expunge (Automatic Translation)
 cache-dir-clean-up-expunge-help=Đặt số ngày một tệp được lưu giữ trong bộ đệm ẩn. (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=Không được duyệt
 not-assigned=Không được gán
 not-attending=Không tham dự
 not-available=Không có sẵn
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=Không chứa (Automatic Translation)
 not-customizable=Không thể tùy chỉnh (Automatic Translation)
 not-customized=Không tùy chỉnh (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=Hủy bỏ lệnh cấm ngày
 unban-this-user=Gỡ lệnh cấm với người dùng này
 unban-user=Người dùng Unban (Automatic Translation)
 unblock=Unblock (Automatic Translation)
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Nguyên (Automatic Translation)
 undefined=Chưa được định nghĩa
 undeployed=Chưa được thực hiện
