--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -2452,7 +2452,7 @@ cab=出租车
 cache-actions=缓存操作
 cache-control=缓存控制
 cache-control-configuration-name=缓存控制
-cache-control-description=为访客设置具有查看权限的文档的缓存控制策略。
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=在首次请求时缓存数据。
 cache-dir-clean-up-expunge=缓存目录清理删除
 cache-dir-clean-up-expunge-help=设置文件在缓存中保存的天数。
@@ -10134,8 +10134,6 @@ not-approved=未被批准
 not-assigned=未分配
 not-attending=不出席
 not-available=不可用
-not-cacheable-mime-types=不可缓存的 MIME 类型
-not-cacheable-mime-types-description=设置将不缓存的 MIME 类型的列表。
 not-contains=不包含
 not-customizable=不可自定义
 not-customized=未自定义
@@ -16369,6 +16367,8 @@ unban-date=解禁日期
 unban-this-user=解禁此用户
 unban-user=解禁用户
 unblock=解除限制
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=保持不变
 undefined=未定义
 undeployed=未部署
