--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -2452,7 +2452,7 @@ cab=計程車
 cache-actions=Cache Actions
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=在第一次請求中，cache 資料。
 cache-dir-clean-up-expunge=Cache Directory Clean Up Expunge
 cache-dir-clean-up-expunge-help=Set the number of days a file is kept in the cache.
@@ -10133,8 +10133,6 @@ not-approved=未核准
 not-assigned=未指派
 not-attending=不出席
 not-available=無
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=不包含
 not-customizable=不可自定義
 not-customized=未自定義
@@ -16368,6 +16366,8 @@ unban-date=取消禁用日期
 unban-this-user=取消禁用這使用者
 unban-user=解禁使用者
 unblock=取消封鎖
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=未變更
 undefined=未定義
 undeployed=未部署
