--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -2452,7 +2452,7 @@ cab=كابينة
 cache-actions=إجراءات التخزين المؤقت
 cache-control=عنصر تحكم ذاكرة التخزين المؤقت
 cache-control-configuration-name=عنصر تحكم ذاكرة التخزين المؤقت
-cache-control-description=تعيين سياسة التحكم في ذاكرة التخزين المؤقت للمستندات مع أذونات العرض للضيوف.
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=بيانات ذاكرة التخزين المؤقت على الطلب الأول.
 cache-dir-clean-up-expunge=مسح دليل التخزين المؤقت لـ Expunge
 cache-dir-clean-up-expunge-help=حدد عدد الأيام التي يحتفظ بها الملف في ذاكرة التخزين المؤقت.
@@ -10132,8 +10132,6 @@ not-approved=غير موافق عليه
 not-assigned=لم يتم توكيله
 not-attending=لن يحضر
 not-available=غير متاح
-not-cacheable-mime-types=بدون أنواع Mime القابلة للتخزين المؤقت
-not-cacheable-mime-types-description=تعيين قائمة بأنواع mime التي لن يتم تخزينها مؤقتًا.
 not-contains=لا يحتوي على
 not-customizable=غير قابل للتخصيص
 not-customized=غير مخصص
@@ -16367,6 +16365,8 @@ unban-date=تاريخ فك الحظر
 unban-this-user=فك حظر المستخدم
 unban-user=فك حظر المستخدم
 unblock=إلغاء الحظر
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=لم يتغير
 undefined=غير معرف
 undeployed=غير منشور
