--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -2452,7 +2452,7 @@ cab=Cab (Automatic Copy)
 cache-actions=Cache Actions (Automatic Copy)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Lehen eskaeran datuak cacheatu.
 cache-dir-clean-up-expunge=Cache Directory Clean Up Expunge (Automatic Copy)
 cache-dir-clean-up-expunge-help=Set the number of days a file is kept in the cache. (Automatic Copy)
@@ -10132,8 +10132,6 @@ not-approved=Onartu gabe
 not-assigned=Esleitu gabe
 not-attending=Ez dute erantzuten
 not-available=E/E
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=Ez dauka
 not-customizable=Not Customizable (Automatic Copy)
 not-customized=Not Customized (Automatic Copy)
@@ -16367,6 +16365,8 @@ unban-date=Bazterketaren amaiera data
 unban-this-user=Erabiltzaile Honen Bazterketa Baliogabetu
 unban-user=Unban User (Automatic Copy)
 unblock=Desblokeatu
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Unchanged (Automatic Copy)
 undefined=Zehaztugabea
 undeployed=Bilduta
