--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -2452,7 +2452,7 @@ cab=تاکسی
 cache-actions=عملیات حافظه
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=ذخیره داده‌ها در اولین درخواست
 cache-dir-clean-up-expunge=کش دایرکتوری تمیز کردن Expunge (Automatic Translation)
 cache-dir-clean-up-expunge-help=تنظیم تعداد روزهایی که یک پرونده در حافظه پنهان نگهداری می شود. (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=تایید نشده
 not-assigned=اختصاص داده نشده
 not-attending=مشارکت نکرده است
 not-available=در دسترس نیست.
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=شامل نمی شود
 not-customizable=قابل تنظیم نیست
 not-customized=سفارشی نشده است (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=تاریخ فعالسازی
 unban-this-user=آزاد کردن کاربر
 unban-user=کاربر Unban
 unblock=خارج کردن از حالت مسدود
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=بدون تغییر
 undefined=تعریف نشده
 undeployed=غیر مستقر
