--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -2452,7 +2452,7 @@ cab=Cab (Automatic Translation)
 cache-actions=Aksi Singgahan (Automatic Translation)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache data on the first request.
 cache-dir-clean-up-expunge=Direktori Cache Bersihkan Expunge (Automatic Translation)
 cache-dir-clean-up-expunge-help=Atur jumlah hari file disimpan di cache. (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=Tidak Disetujui
 not-assigned=Tidak Ditugaskan (Automatic Translation)
 not-attending=Tidak Hadir
 not-available=N/a (Automatic Translation)
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=Tak Memuat (Automatic Translation)
 not-customizable=Tidak Dapat Disesuaikan (Automatic Translation)
 not-customized=Tidak Dikustomisasi (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=Tanggal Unban
 unban-this-user=Unban Pengguna Ini (Automatic Translation)
 unban-user=Pengguna Unban (Automatic Translation)
 unblock=Membuka blokir
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Berubah (Automatic Translation)
 undefined=Tidak didefinisikan
 undeployed=Belum di-ployed (Automatic Translation)
