--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -2452,7 +2452,7 @@ cab=מונית
 cache-actions=פעולות מטמון
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=נתוני מטמון בבקשה הראשונה.
 cache-dir-clean-up-expunge=ספריית מטמון ניקוי מחיקה
 cache-dir-clean-up-expunge-help=הגדר את מספר הימים שקובץ נשמר במטמון.
@@ -10132,8 +10132,6 @@ not-approved=לא מאושר
 not-assigned=אינו מוקצה
 not-attending=לא נוכח
 not-available=לא זמין
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=לא מכיל (Automatic Translation)
 not-customizable=לא ניתן להתאמה אישית
 not-customized=לא מותאם אישית (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=בטל חסימת תאריך
 unban-this-user=בטל חסימת משתמש זה
 unban-user=בטל חסימת משתמש
 unblock=בטל חסימה
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=ללא שינוי
 undefined=לא מוגדר
 undeployed=מבוטל
