--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -2452,7 +2452,7 @@ cab=CAB
 cache-actions=Voorgeheugenacties
 cache-control=Cachebesturing
 cache-control-configuration-name=Cachebesturing
-cache-control-description=Cachecontrolebeleid instellen voor documenten met leesmachtigingen voor gasten.
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Gegevens in het voorgeheugen van het eerste verzoek
 cache-dir-clean-up-expunge=Opruiming cachedirectory verwijderen
 cache-dir-clean-up-expunge-help=Stel het aantal dagen in dat een bestand wordt bewaard in de cache.
@@ -10135,8 +10135,6 @@ not-approved=Niet goedgekeurd
 not-assigned=Niet toegewezen
 not-attending=Niet aanwezig
 not-available=Niet beschikbaar
-not-cacheable-mime-types=Niet in de cache opneembare MIME-types
-not-cacheable-mime-types-description=Stel een lijst in van MIME-types die niet in cache komen.
 not-contains=Bevat niet
 not-customizable=Niet aanpasbaar
 not-customized=Niet aangepast
@@ -16370,6 +16368,8 @@ unban-date=Einddatum van uitsluiting
 unban-this-user=Uitsluiten ongedaan maken
 unban-user=Gebruikersban opheffen
 unblock=Deblokkeren
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Ongewijzigd
 undefined=Niet-gedefinieerd
 undeployed=Gedeïnstalleerd
