--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -2452,7 +2452,7 @@ cab=Cabină (Automatic Translation)
 cache-actions=Acțiuni cache (Automatic Translation)
 cache-control=Control cache
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache data on the first request.
 cache-dir-clean-up-expunge=Director cache Curățare ștergere (Automatic Translation)
 cache-dir-clean-up-expunge-help=Setați numărul de zile în care un fișier este păstrat în memoria cache. (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=Neaprobat
 not-assigned=Neasignat
 not-attending=Nu participa
 not-available=Nu sunt disponibile
-not-cacheable-mime-types=Tipuri Mime care nu sunt cacheabile
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=Nu conține (Automatic Translation)
 not-customizable=Nu este personalizabil (Automatic Translation)
 not-customized=Nea particularizat (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=Data Anularii Interzicerii
 unban-this-user=Anulareban acest utilizator (Automatic Translation)
 unban-user=Utilizator Unban (Automatic Translation)
 unblock=Debloca (Automatic Translation)
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Neschimbat (Automatic Translation)
 undefined=Nedefinit
 undeployed=nedesfasurat
