--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -2452,7 +2452,7 @@ cab=такси (Automatic Translation)
 cache-actions=Действия кэша (Automatic Translation)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache data on the first request.
 cache-dir-clean-up-expunge=Каталог кэша Очистить Expunge (Automatic Translation)
 cache-dir-clean-up-expunge-help=Установите количество дней, в течение которые файл хранится в кэше. (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=Не одобрен
 not-assigned=Не назначено
 not-attending=Не посещает
 not-available=Н/Д
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=Не содержит (Automatic Translation)
 not-customizable=Не настраиваемый (Automatic Translation)
 not-customized=Не настроено (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=Дата отмены запрета
 unban-this-user=Разблокировать этого пользователя
 unban-user=Пользователь Unban (Automatic Translation)
 unblock=разблокировать (Automatic Translation)
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=неизменившийся (Automatic Translation)
 undefined=Неопределенно
 undeployed=Удаленный
