--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -2452,7 +2452,7 @@ cab=Taxík
 cache-actions=Akcie vyrovnávacej pamäte (Automatic Translation)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache data on the first request.
 cache-dir-clean-up-expunge=Vyrovnávacia pamäť adresár vyčistiť expunge (Automatic Translation)
 cache-dir-clean-up-expunge-help=Nastavte počet dní, počas ktoré sa súbor uchováva vo vyrovnávacej pamäti. (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=Neschválené
 not-assigned=Nepriradené
 not-attending=Nezúčastňujúci sa
 not-available=Nedostupný (Automatic Translation)
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=Neobsahuje (Automatic Translation)
 not-customizable=Neprispôsobiteľné
 not-customized=Nie je prispôsobené (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=Dátum odblokovania
 unban-this-user=Odblokuj tohto používateľa
 unban-user=Používateľ Unban (Automatic Translation)
 unblock=Odblokovať
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=nezmenený (Automatic Translation)
 undefined=Nedefinovaný
 undeployed=Odinštalovaný
