--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -2452,7 +2452,7 @@ cab=Kabino (Automatic Translation)
 cache-actions=Dejanja predpomnilnika (Automatic Translation)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache data on the first request.
 cache-dir-clean-up-expunge=Predpomnilnik Imenik čiščenje Expunge (Automatic Translation)
 cache-dir-clean-up-expunge-help=Nastavite število dni, ko se datoteka hrani v predpomnilniku. (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=Ni potrjeno
 not-assigned=Ni dodeljeno (Automatic Translation)
 not-attending=Neudeležen
 not-available=N/a (Automatic Translation)
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=Ne vsebuje (Automatic Translation)
 not-customizable=Ni prilagodljivo (Automatic Translation)
 not-customized=Ni prilagojeno (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=Ponovno mogoči datum.
 unban-this-user=Odpusti tega uporabnika (Automatic Translation)
 unban-user=Odkleni uporabnika (Automatic Translation)
 unblock=Odblokirati (Automatic Translation)
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Nespremenjeno (Automatic Translation)
 undefined=Nedefiniran.
 undeployed=Nedelo- (Automatic Translation)
