--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -2452,7 +2452,7 @@ cab=Taksi (Automatic Translation)
 cache-actions=Önbellek Eylemleri (Automatic Translation)
 cache-control=Cache Control (Automatic Copy)
 cache-control-configuration-name=Cache Control (Automatic Copy)
-cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
+cache-control-description=Set the cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache data on the first request.
 cache-dir-clean-up-expunge=Önbellek Dizini Temizleme Expunge (Automatic Translation)
 cache-dir-clean-up-expunge-help=Bir dosyanın önbellekte tutulduk gün sayısını ayarlayın. (Automatic Translation)
@@ -10132,8 +10132,6 @@ not-approved=Onaylanmadı
 not-assigned=Atanmadı (Automatic Translation)
 not-attending=Katılmıyor
 not-available=Yok (Automatic Translation)
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
-not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=İçermiyor (Automatic Translation)
 not-customizable=Özelleştirilebilir Değil (Automatic Translation)
 not-customized=Özelleştirilmedi (Automatic Translation)
@@ -16367,6 +16365,8 @@ unban-date=Yasak kaldırma tarihi
 unban-this-user=Bu Kullanıcının Oturumlarını Çöz (Automatic Translation)
 unban-user=Kullanıcının (Automatic Translation)
 unblock=Unblock (Automatic Translation)
+uncacheable-mime-types=Uncacheable Mime Types (Automatic Copy)
+uncacheable-mime-types-description=Set a list of mime types that will be uncacheable. (Automatic Copy)
 unchanged=Değişme -den (Automatic Translation)
 undefined=Tanımlanmamış
 undeployed=Undepyed (Automatic Translation)
